# benchmark-template

./: .gitignore
src/: CMakeLists.txt
src/bmark/: CMakeLists.txt  bm.cpp
src/cmake/: ConfigGBench.cmake  ConfigGTest.cmake
src/lib/: CMakeLists.txt  lib.cpp
src/test/: CMakeLists.txt  test.cpp
