CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (TODO)
SET(CMAKE_CXX_STANDARD 14)

# Google Benchmark
SET(BENCHMARK_ENABLE_TESTING OFF)
SET(BENCHMARK_DOWNLOAD_DEPENDENCIES ON)
INCLUDE(cmake/ConfigGBench.cmake)
INCLUDE(cmake/ConfigGTest.cmake)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/lib/)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test/)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/bmark/)
